poster name no longer stretches to full width
the tripcode would reveal itself when the part to the right was hovered, which was weird from a UX perspective

--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,10 @@ body {
     font-family: sans-serif;
 }
 
+.poster {
+    align-self: flex-start;
+}
+
 .poster .tripcode {
     align-self: flex-end;
     display: inline-block;
